# docs/swagger.json
@@ -14,6 +14,43 @@
     },
     "host": "localhost:8080",
     "paths": {
+        "/users/auth/upload": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "users file",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/controller.UploadResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/users/auth/{id}": {
             "get": {
                 "produces": [
@@ -121,11 +158,11 @@
             "properties": {
                 "account": {
                     "type": "string",
-                    "example": "000"
+                    "example": "account"
                 },
                 "password": {
                     "type": "string",
-                    "example": "000"
+                    "example": "password"
                 }
             }
         },
@@ -160,6 +197,22 @@
                 "msg": {
                     "type": "string",
                     "example": "Successfully login."
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 0
+                }
+            }
+        },
+        "controller.UploadResponse": {
+            "type": "object",
+            "properties": {
+                "file_name": {
+                    "type": "string"
+                },
+                "msg": {
+                    "type": "string",
+                    "example": "Successfully uploaded."
                 },
                 "status": {
                     "type": "integer",
